feat: restore deleted expenses and groups
